--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
-                <span>HARDOX</span>
-                <span>GYM</span>
+                <span>Muscle</span>
+                <span>Factory</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">HOME</a></li>
